app/sass/components/_header.sass
.site-header
  padding-top: 20px
  +xs
    padding-top: 50px

.logo
  &__img
    height: 30px

.lang-sw
  height: 100%
  display: flex
  align-content: center
  justify-content: flex-end
  select
    padding-right: 15px
    border: none
    background-color: transparent
    background: url("../img/down-arrow.svg") right 46%
    background-repeat: no-repeat
    color: #ffffff
    cursor: pointer

